# 2024-2025

./: README.md  qr.py
Interfaz/: Interfaz.py
Interfaz/Content/: hola  hola.cpp
UProbotics_system/: manage.py
UProbotics_system/UProbotics_app/: apps.py  models.py  views.py
UProbotics_system/UProbotics_app/static/UProbotics_app/css/: color_palette.css  meet_us.css
UProbotics_system/UProbotics_app/templates/UProbotics_app/: administracion.html  electronica.html  index.html  mecatronica.html  programadores.html
UProbotics_system/UProbotics_system/: asgi.py  settings.py  urls.py  wsgi.py
base de datos/: CreadorQR.py  almacenamiento.py  almacenamientooooo.sql
ixnaminki_olinki_ws/src/: a
ixnaminki_olinki_ws/src/formatos/: CMakeLists.txt
ixnaminki_olinki_ws/src/formatos/msg/: Sensor.msg
ixnaminki_olinki_ws/src/formatos/scripts/: service_server.py
ixnaminki_olinki_ws/src/formatos/srv/: Movearm.srv  Moverob.srv
ixnaminki_olinki_ws/src/interfaz/: package.xml  setup.cfg  setup.py
ixnaminki_olinki_ws/src/interfaz/interfaz/: Interfaz.py  main.py
ixnaminki_olinki_ws/src/interfaz/interfaz/Content/: Arm.qml  Home.qml  Movement.qml  Movimiento.qml  homec.qml  init.qml
ixnaminki_olinki_ws/src/movimiento/: CMakeLists.txt  package.xml
ixnaminki_olinki_ws/src/movimiento/src/: movimiento.cpp
ixnaminki_olinki_ws/src/posicion/: CMakeLists.txt  package.xml
ixnaminki_olinki_ws/src/posicion/srv/: Target.srv
ixnaminki_olinki_ws/src/si/: package.xml  setup.cfg
ixnaminki_olinki_ws/src/si/si/: CambioEjes.py  MoveArmClient.py  MoveRob.py  interfaz.py  interfaz2.py
ixnaminki_olinki_ws/src/si/si.egg-info/: SOURCES.txt
ixnaminki_olinki_ws/src/xbox/: CMakeLists.txt
ixnaminki_olinki_ws/src/xbox/src/: joystick_reader.cpp  prueba.cpp  teclado.cpp
src/formatos/: package.xml
src/interfaz/: Interfaz.py  package.xml
src/interfaz/interfaz/: Interfaz.py  UntitledProject.qmlproject.qtds
src/interfaz/interfaz/Content/: Home.qml  global.js
src/movimiento/src/: sensorData.cpp
src/si/: setup.py
src/si/si/: example.py
src/si/si.egg-info/: PKG-INFO
src/xbox/: package.xml
